minor fix to the items spacing in the project flex

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,7 +14,7 @@ p {
 
 h1,
 h2,
-.subtitle-text {
+.subtitle-text,h3 {
   text-align: center;
   font-size: 5rem;
   margin: 0;
@@ -392,9 +392,10 @@ span>.roadmap-square{
 .project-flex,.project-flex-black{
   display: flex;
   justify-content: space-around;
-  gap: 7%;
+  gap: 3%;
   padding: 40px;
 }
+
 
 .project-flex-black{
   background-color: black;
@@ -402,9 +403,13 @@ span>.roadmap-square{
   
 }
 
+.project-flex>p,.project-flex-black>p{
+  width: 40%;
+}
+
 .project-flex>img,.project-flex-black>img{
- height: auto;
- width: 350px;
+  height: 20rem;
+  width: auto;
 }
 
 /****************************KEYFRAMES*********************************/
